# AirtestPro

./: .gitignore  README.md  README_zh.md  pyproject.toml  setup.py
airtest_pro/: __init__.py  __main__.py
airtest_pro/aircv/: aircv.py  keypoint_base.py  multiscale_template_matching.py  screen_recorder.py  template.py  template_matching.py  utils.py
airtest_pro/cli/: __main__.py  info.py  parser.py  runner.py
airtest_pro/core/: api.py  assertions.py  cv.py  helper.py  settings.py
airtest_pro/core/android/: __init__.py  adb.py  android.py  constant.py  ime.py  recorder.py  rotation.py  yosemite.py  yosemite_ext.py
airtest_pro/core/android/cap_methods/: adbcap.py  base_cap.py  javacap.py  minicap.py  screen_proxy.py
airtest_pro/core/android/touch_methods/: base_touch.py  maxtouch.py  minitouch.py  touch_proxy.py
airtest_pro/core/ios/: __init__.py  constant.py  goios_helper.py  instruct_cmd.py  ios.py  ios_utils.py  minicap.py  mjpeg_cap.py  relay.py  rotation.py  tidevice_helper.py
airtest_pro/core/ios/goios/windows/: selfIdentity.plist
airtest_pro/core/linux/: linux.py
airtest_pro/core/win/: screen.py  win.py
airtest_pro/report/: report.py
airtest_pro/utils/: decorators.py  logger.py  logwraper.py  runcommand.py  selenium_proxy.py  version.py
benchmark/: README.md  README_cn.md  profile_recorder.py
docs/: README_MORE.rst  conf.py
docs/locale/zh_CN/LC_MESSAGES/: README.po  README_MORE.po  index.po
docs/locale/zh_CN/LC_MESSAGES/all_module/: airtest.aircv.aircv.po  airtest.aircv.cal_confidence.po  airtest.aircv.error.po  airtest.aircv.keypoint_base.po  airtest.aircv.keypoint_matching.po  airtest.aircv.keypoint_matching_contrib.po  airtest.aircv.match.po  airtest.aircv.multiscale_template_matching.po  airtest.aircv.po  airtest.aircv.sift.po  airtest.aircv.smart_crop.po  airtest.aircv.template.po  airtest.aircv.template_matching.po  airtest.aircv.utils.po  airtest.cli.info.po  airtest.cli.parser.po  airtest.cli.po  airtest.cli.runner.po  airtest.core.android.adb.po  airtest.core.android.android.po  airtest.core.android.cap_methods.adbcap.po  airtest.core.android.cap_methods.base_cap.po  airtest.core.android.cap_methods.javacap.po  airtest.core.android.cap_methods.minicap.po  airtest.core.android.cap_methods.po  airtest.core.android.cap_methods.screen_proxy.po  airtest.core.android.constant.po  airtest.core.android.ime.po  airtest.core.android.javacap.po  airtest.core.android.minicap.po  airtest.core.android.minitouch.po  airtest.core.android.po  airtest.core.android.recorder.po  airtest.core.android.rotation.po  airtest.core.android.touch_methods.base_touch.po  airtest.core.android.touch_methods.maxtouch.po  airtest.core.android.touch_methods.minitouch.po  airtest.core.android.touch_methods.po  airtest.core.android.touch_methods.touch_proxy.po  (+30 more)
docs/wiki/code/: code_example.md
docs/wiki/device/: android.md  android_zh.md
playground/: android_motionevents.py  poco.py  ui.py  win_ide.py  xy.py
playground/blackjack_example/: test_blackjack.py
playground/test_blackjack.air/: test_blackjack.py
tests/: test_adb.py  test_aircv.py  test_android.py  test_android_recorder.py  test_api.py  test_apkparser.py  test_assertions.py  test_cli.py  test_goios.py  test_ios.py  test_ios_instruct_cmd.py  test_ios_mjpeg.py  test_maxtouch.py  test_minicap.py  test_minitouch.py  test_motionevents.py  test_report.py  test_screen_proxy.py  test_tidevice.py  test_touch_proxy.py  test_win.py  test_win_app.py  test_yosemite.py  testconf.py
(+16 files in other folders)
